--- a/css/styles.css
+++ b/css/styles.css
@@ -16,7 +16,9 @@
   --header-border-color: #ececec;
   --background-footer-color: #2f303a;
   --footer-text-color: rgba(255, 255, 255, 0.6);
+  --background-hero-color: #c4c4c4;
   --background-button-portfolio: #f5f4fa;
+  --background-pfl-card: #eeeeee;
 
   --width-container: 1200px;
   --card-set-gap: 30px;
@@ -54,7 +56,7 @@ body {
 
 /*---ШАПКА---*/
 .page-header {
-  outline: 1px solid var(--header-border-color);
+  border: 1px solid var(--header-border-color);
 
   letter-spacing: 0.02em;
   font-size: 14px;
@@ -89,6 +91,7 @@ body {
 
 /*лого в футере*/
 .logo-header.logo-footer {
+  display: inline-block;
   margin-bottom: 20px;
 
   color: var(--white-color);
@@ -163,14 +166,18 @@ body {
   margin-left: auto;
   margin-right: auto;
 
-  background-color: #2f303a;
+  background-color: var(--background-hero-color);
+  background-image: url('../images/hero.jpg');
+  background-size: 1600px 600px;
+  background-position: center;
+  background-repeat: no-repeat;
+
   color: var(--white-color);
   letter-spacing: 0.06em;
   text-align: center;
 }
 
 .hero-title {
-  margin-top: 0;
   margin-bottom: 30px;
   margin-right: auto;
   margin-left: auto;
@@ -326,6 +333,9 @@ body {
   flex-basis: calc(100% / 4 - var(--card-set-gap));
   margin-top: var(--card-set-gap);
   margin-left: var(--card-set-gap);
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 0px 0px 4px 4px;
 }
 
 /*обертка подписей под фото*/
@@ -351,6 +361,7 @@ body {
 }
 
 .footer p {
+  display: inline-block;
   margin-bottom: 9px;
 }
 
@@ -369,13 +380,19 @@ body {
   color: var(--accent-color);
 }
 
-/*позиционирование адреса*/
-.flex-address {
+/*позиционирование контента футера*/
+.flex-footer {
   display: flex;
   flex-direction: column;
   justify-content: center;
   padding-top: 60px;
   padding-bottom: 60px;
+}
+
+/*позиционирование адреса*/
+.flex-address {
+  display: flex;
+  flex-direction: column;
 }
 
 /*---СТРАНИЦА ПОРТФОЛИО---*/
@@ -437,6 +454,14 @@ body {
   flex-basis: calc(100% / 3 - var(--card-set-gap));
   margin-left: var(--card-set-gap);
   margin-top: var(--card-set-gap);
+  border: 1px solid var(--background-pfl-card);
+}
+
+/*появление тени при наведении на карточку*/
+.pfl-item:hover,
+.pfl-item:focus {
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+    1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
 /*заголовки в списке портфолио*/
