--- a/css/styles.css
+++ b/css/styles.css
@@ -17,6 +17,7 @@
   --background-footer-color: #2f303a;
   --footer-text-color: rgba(255, 255, 255, 0.6);
   --background-hero-color: #c4c4c4;
+  --background-hero-gradient: rgba(47, 48, 58, 0.4);
   --background-button-portfolio: #f5f4fa;
   --background-pfl-card: #eeeeee;
 
@@ -166,11 +167,16 @@ body {
   margin-left: auto;
   margin-right: auto;
 
-  background-color: var(--background-hero-color);
-  background-image: url('../images/hero.jpg');
-  background-size: 1600px 600px;
+  background-image: linear-gradient(
+      to right,
+      var(--background-hero-gradient),
+      var(--background-hero-gradient)
+    ),
+    url('../images/hero.jpg');
+  background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
+  background-color: var(--background-hero-color);
 
   color: var(--white-color);
   letter-spacing: 0.06em;
