--- a/css/styles.css
+++ b/css/styles.css
@@ -20,6 +20,7 @@
   --background-hero-gradient: rgba(47, 48, 58, 0.4);
   --background-button-portfolio: #f5f4fa;
   --background-pfl-card: #eeeeee;
+  --rectangle-line-clients: #afb1b8;
 
   --width-container: 1200px;
   --card-set-gap: 30px;
@@ -92,7 +93,7 @@ body {
 
 /*лого в футере*/
 .logo-header.logo-footer {
-  display: inline-block;
+  /*display: inline-block;*/
   margin-bottom: 20px;
 
   color: var(--white-color);
@@ -229,6 +230,7 @@ body {
 .section.section-features {
   padding-bottom: 0;
 }
+
 /*фон для секции команды*/
 .section.section-team {
   background-color: var(--background-button-portfolio);
@@ -257,14 +259,19 @@ body {
 }
 
 /*сетка*/
-.features-list > .item {
+.features-item {
   flex-basis: calc(100% / 4 - var(--card-set-gap));
   margin-top: var(--card-set-gap);
   margin-left: var(--card-set-gap);
 }
 
-.features-list .item + .item {
-  margin-left: 30px;
+/*иконки*/
+.features-icon {
+  padding: 20px 100px;
+  margin-bottom: 30px;
+  width: 270px;
+  height: 120px;
+  background-color: var(--background-button-portfolio);
 }
 
 /*заголовки*/
@@ -348,6 +355,44 @@ body {
 .team-content {
   padding-top: var(--card-set-gap);
   padding-bottom: var(--card-set-gap);
+}
+
+/*---ПОСТОЯННЫЕ КЛИЕНТЫ---*/
+.clients-list {
+  display: flex;
+  flex-wrap: wrap;
+  padding: 0;
+  margin: 0;
+  margin-top: calc(-1 * var(--card-set-gap));
+  margin-left: calc(-1 * var(--card-set-gap));
+
+  line-height: 1.19;
+}
+
+/*сетка*/
+.clients-item {
+  flex-basis: calc(100% / 6 - var(--card-set-gap));
+  margin-left: var(--card-set-gap);
+  margin-top: var(--card-set-gap);
+}
+
+.clients-link {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 90px;
+  border: 1px solid var(--rectangle-line-clients);
+  border-radius: 4px;
+}
+
+/*изменение цвета элемента меню при наведении*/
+.clients-link:hover,
+.clients-link:focus {
+  border: 1px solid var(--accent-color);
+}
+
+.clients-icon {
+  outline: 1px solid purple;
 }
 
 /*---ФУТЕР---*/
