--- a/css/styles.css
+++ b/css/styles.css
@@ -20,7 +20,7 @@
   --background-hero-gradient: rgba(47, 48, 58, 0.4);
   --background-button-portfolio: #f5f4fa;
   --background-pfl-card: #eeeeee;
-  --rectangle-line-clients: #afb1b8;
+  --icon-color: #afb1b8;
 
   --width-container: 1200px;
   --card-set-gap: 30px;
@@ -161,6 +161,9 @@ body {
   color: var(--accent-color);
 }
 
+.nav-icon {
+  border: 1px solid var(--rectangle-line-clients);
+}
 /*---ГЕРОЙ---*/
 .hero {
   max-width: 1600px;
@@ -335,6 +338,7 @@ body {
 
 /*текст*/
 .team-list p {
+  margin-bottom: 16px;
   color: var(--text-color);
   font-weight: 400;
   font-size: 16px;
@@ -349,6 +353,35 @@ body {
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
+}
+
+/*список ссылок на социальные сети*/
+.team-icon-list {
+  margin: 0;
+  padding: 0px 32px;
+  display: flex;
+  justify-content: space-between;
+  color: var(--icon-color);
+}
+
+/*иконки*/
+.team-icon {
+  padding: 12px;
+  width: 44px;
+  height: 44px;
+  fill: currentColor;
+}
+
+.team-icon-hover {
+  display: block;
+  color: var(--icon-color);
+}
+
+.team-icon-hover:hover,
+.team-icon-hover:focus {
+  background-color: var(--accent-color);
+  color: var(--white-color);
+  border-radius: 50%;
 }
 
 /*обертка подписей под фото*/
@@ -381,18 +414,20 @@ body {
   justify-content: center;
   align-items: center;
   height: 90px;
-  border: 1px solid var(--rectangle-line-clients);
+  border: 1px solid var(--icon-color);
   border-radius: 4px;
+  color: var(--icon-color);
 }
 
 /*изменение цвета элемента меню при наведении*/
 .clients-link:hover,
 .clients-link:focus {
+  color: var(--accent-color);
   border: 1px solid var(--accent-color);
 }
 
 .clients-icon {
-  outline: 1px solid purple;
+  fill: currentColor;
 }
 
 /*---ФУТЕР---*/
