--- a/css/styles.css
+++ b/css/styles.css
@@ -685,11 +685,16 @@ body {
   border: 1px solid var(--background-pfl-card);
 }
 
+.pfl-link {
+  display: block;
+}
+
 /*появление тени при наведении на карточку*/
-.pfl-item:hover,
-.pfl-item:focus {
+.pfl-link:hover,
+.pfl-link:focus {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
     1px 4px 6px rgba(0, 0, 0, 0.16);
+  outline: none;
 }
 
 /*заголовки в списке портфолио*/
